Network_Policies/1.Deploy-VM-NS-ZeroTrust.yml
#Test zero-trust calico
# nano 1.Deploy-VM-NS-ZeroTrust.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: calico-vm-test
  namespace: zero-trust
  labels:
    app: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh", "-c", "echo VERSION 1.0 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]

#Deployment da app
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  namespace: zero-trust
  labels:
    app: front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80


#Service
